--- a/package.json
+++ b/package.json
@@ -18,13 +18,19 @@
     "typescript": "^4.4.4"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^8.5.5",
     "@types/node": "^16.11.1",
+    "@types/uuid": "^8.3.1",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.1.3",
     "mongoose": "^6.0.11",
-    "nodemon": "^2.0.14"
+    "nodemon": "^2.0.14",
+    "uuid": "^8.3.2"
   }
 }
